force-app/main/default/objects/XactlyExpress__XCQuota__c/XactlyExpress__XCQuota__c.object-meta.xml
<CustomObject>
    <label>XCQuota</label>
    <nameField>
        <label>XCQuota Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCQuotas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>