force-app/main/default/objects/XactlyExpress__XCQuota__c/fields/XactlyExpress__Frequency__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>