force-app/main/default/objects/XactlyExpress__XCQuota__c/fields/XactlyExpress__isDisplayed__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__isDisplayed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field to determine if a quota rule is visible on review plan page</description>
    <inlineHelpText>field to determine if a quota rule is visible on review plan page</inlineHelpText>
    <label>isDisplayed</label>
    <type>Checkbox</type>
</CustomField>