force-app/main/default/objects/XactlyExpress__XCQuota__c/fields/XactlyExpress__showMonthly__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__showMonthly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>display month quota on plan document page</description>
    <label>showMonthly</label>
    <type>Checkbox</type>
</CustomField>