force-app/main/default/objects/XactlyExpress__XCQuota__c/fields/XactlyExpress__showQuarterly__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__showQuarterly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>display quarterly quota values on plan doc</description>
    <label>showQuarterly</label>
    <type>Checkbox</type>
</CustomField>